[tool.poetry]
name = "time-series-prediction"
version = "0.1.0"
description = ""
authors = ["Sherwin-14 <varghesesheriwn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.1.3"
plotly = "^5.24.1"
seaborn = "^0.13.2"
streamlit = "^1.40.1"
streamlit-tags = "^1.2.8"
streamlit-antd-components = "^0.3.2"
extra-streamlit-components = "^0.1.71"
torch = "^1.0.2"
pmdarima = "^2.0.4"
prophet = "^1.1.6"
optuna = "^4.1.0"
scikit-learn = "^1.5.2"
xgboost = "^2.1.2"
statsmodels = "^0.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
